--- a/login/login.html
+++ b/login/login.html
@@ -9,6 +9,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <script>
+        function login()
+        {
+            var uname = document.getElementById("email").value;
+            var pwd = document.getElementById("pwd1").value;
+            var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+            if(uname =='')
+            {
+                alert("please enter user name.");
+            }
+            else if(pwd=='')
+            {
+                alert("enter the password");
+            }
+            else if(!filter.test(uname))
+            {
+                alert("Enter valid email id.");
+            }
+            else if(pwd.length < 6 || pwd.length > 6)
+            {
+                alert("Password min and max length is 6.");
+            }
+            else
+            {
+                alert('Thank You for Login & You are Redirecting to Campuslife Website');
+            }
+        }
+        //Reset Inputfield code.
+        function clearFunc()
+        {
+            document.getElementById("email").value="";
+            document.getElementById("pwd1").value="";
+        }
+
+    </script>
 </head>
 <body>
 <h1>Hello, world!</h1>
