Comunicando com backend

--- a/login/login.html
+++ b/login/login.html
@@ -50,6 +50,7 @@
             }
             else
             {
+                sendForm();
                 alert('Thank You for Login & You are Redirecting to Campuslife Website');
             }
         }
@@ -58,6 +59,18 @@
         {
             document.getElementById("email").value="";
             document.getElementById("pwd1").value="";
+        }
+        function sendForm() {
+            console.log("entrou aqui");
+            var formData = new FormData();
+            formData.append('username', 'johndoe');
+            formData.append('id', 123456);
+
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/server', true);
+            // xhr.onload = function(e) { ... };
+
+            xhr.send(formData);
         }
 
     </script>
@@ -74,14 +87,14 @@
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <label for="exampleInputPassword1" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" value="Login"  onClick="login()" class="btn btn-primary">Submit</button>
             </form>
 
         </div>
