--- a/login/login.html
+++ b/login/login.html
@@ -7,6 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Axios api-->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+
 
     <style type="text/css">
         body {
@@ -29,48 +33,63 @@
     <script>
         function login()
         {
-            var uname = document.getElementById("email").value;
-            var pwd = document.getElementById("pwd1").value;
+
+            var uname = document.getElementById("uname").value;
+            var pwd = document.getElementById("password").value;
+            console.log("valor de pwd : ", pwd);
             var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
             if(uname =='')
             {
-                alert("please enter user name.");
+                alert("Entre com o nome de usuário");
             }
             else if(pwd=='')
             {
-                alert("enter the password");
+                alert("Digite sua senha");
             }
-            else if(!filter.test(uname))
-            {
-                alert("Enter valid email id.");
-            }
-            else if(pwd.length < 6 || pwd.length > 6)
-            {
-                alert("Password min and max length is 6.");
-            }
+
             else
             {
-                sendForm();
-                alert('Thank You for Login & You are Redirecting to Campuslife Website');
+                console.log(getUser(uname,pwd));
+
             }
         }
         //Reset Inputfield code.
         function clearFunc()
         {
             document.getElementById("email").value="";
-            document.getElementById("pwd1").value="";
+            document.getElementById("pwd").value="";
         }
-        function sendForm() {
-            console.log("entrou aqui");
-            var formData = new FormData();
-            formData.append('username', 'johndoe');
-            formData.append('id', 123456);
+        // async function sendForm(uname,pwd) {
+        //     // const axios = require('axios').default;
+        //     console.log()
+        //     console.log(pwd)
+        //    return await axios
+        //    .get('http://10.26.6.244:8686/usuario/users/uname/pwd')
+        //         .then((response) => {
+        //             console.log(response);
+        //             // console.log(response.data);
+        //             // console.log(response.status);
+        //             // console.log(response.statusText);
+        //             // console.log(response.headers);
+        //             // console.log(response.config);
+        //         })
+        //        .catch( (error) => {
+        //            // handle error
+        //            console.log(error);
+        //        })
+        //        ;
 
-            var xhr = new XMLHttpRequest();
-            xhr.open('POST', '/server', true);
-            // xhr.onload = function(e) { ... };
 
-            xhr.send(formData);
+            async function getUser(uname ,pwd) {
+            // uname = 'magalu';
+                try {
+                    const response = await axios.get('http://10.26.6.244:8686/usuario/users/'+uname+ '/' + pwd);
+
+                    console.log(response.data);
+                } catch (error) {
+                    console.log("entrou aqui ");
+                    console.error(error);
+                }
         }
 
     </script>
@@ -81,18 +100,18 @@
     <div class="row">
         <div class="">
             <form>
+<!--                <div class="mb-3">-->
+<!--                    <label for="userName" class="form-label">Nome de usuário</label>-->
+<!--                    <input type="text" class="form-control" placeholder="Nome de usuário">-->
+<!--                    <div id="userName" class="form-text"></div>-->
+<!--                </div>-->
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <label for="uname" class="form-label">Nome de usuário</label>
+                    <input type="password" class="form-control" id="uname">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Senha</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <label for="password" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="password">
                 </div>
                 <button type="submit" value="Login"  onClick="login()" class="btn btn-primary">Submit</button>
             </form>
